--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14342,6 +14342,10 @@ video {
   transition-delay: 1000ms;
 }
 
+.text-yellow {
+  color: [object Object];
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
