--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .main-container {
-  margin: 5vh 5vw;
+  /* margin: 5vh 5vw; */
 }
 
 .product-card__container img {
   max-height: 250px;
+}
+
+html {
+  background-color: #edf2f7;
 }
