Edited the Header

--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,12 @@ html {
   background-color: #edf2f7;
 }
 
-.footer-1 {
+.mn-bg-black {
   background-color: #202020;
 }
-.footer-2 {
+.mn-bg-yellow {
   background-color: #ebe714;
 }
-.footer-3 {
+.mn-bg-light-red {
   background-color: #ee3b34;
 }
