--- a/src/components/CreateProduct/CreateProductModal.css
+++ b/src/components/CreateProduct/CreateProductModal.css
@@ -6,7 +6,7 @@
 
 .create-product-modal__container {
   width: 455px;
-  height: 100%;
+  height: 425px;
 }
 
 .popup-content .product-card__container {
