--- a/src/components/ProductCard/productCard.css
+++ b/src/components/ProductCard/productCard.css
@@ -1,9 +1,14 @@
 .product-card__container .popup-content {
-  width: 200px !important;
-  height: 4rem;
+  width: 150px !important;
+  height: 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 40px;
+}
+
+.product-card__container .popup-content .popup-arrow {
+  display: none;
 }
 
 .product-card__container img {
