--- a/src/components/OrderProductModal/OrderProductModal.css
+++ b/src/components/OrderProductModal/OrderProductModal.css
@@ -14,6 +14,10 @@
   justify-content: flex-end;
 }
 
+#orderProductModal .ant-form-item {
+  margin-bottom: 16px;
+}
+
 @media only screen and (max-width: 575px) {
   .order-product-modal__container .ant-col-offset-8 {
     margin-left: 0;
